--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?ltukot#1" target="_blank">首页</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/1?thanzdpfo" target="_blank">动态网</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/2?ezyzzjo" target="_blank">大纪元</a> | <a href="https://d2aqxvnyguf0uq.cloudfront.net/4?ysbdvt" target="_blank">看中国</a> | <a href="https://d11leod1im7q2u.cloudfront.net/pHh5q?nzxjo" target="_blank">新生网</a> | <a href="https://d3malt9gyhsmb.cloudfront.net/tktpt?ypltekfoc" target="_blank">阿波罗网</a> | <a href="https://dycmgeziwp90b.cloudfront.net/Mjpvu?dtqayapsu" target="_blank">干净世界</a> | <a href="https://d3bo5docy69ast.cloudfront.net/10?ujprl" target="_blank">退党服务</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/Rffqf?bjvlhyyco" target="_blank">明慧广播</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/nw9Vn?mpnljogvl" target="_blank">传奇时代</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/AF9AG?lfrgcqkl" target="_blank">新境界影视</a> | <a href="https://doqmgyop4u892.cloudfront.net/zqMQA?lgmsrt" target="_blank">文昭谈论</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/7?rrzlyuoy" target="_blank">明慧</a></p><p><a href="https://d2jsgnf2snq1t5.cloudfront.net/9?zvnrb" target="_blank">大法</a> | <a href="https://d3a3umoypakbtm.cloudfront.net/3?bspcpq" target="_blank">新唐人</a> | <a href="https://d3vg08phoazui6.cloudfront.net/obAhT?aeiyhwha" target="_blank">人民报</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/xXNHu?nsxnttap" target="_blank">放光明</a> | <a href="https://d1u99il8548gs4.cloudfront.net/5?wkfjsmn" target="_blank">新纪元</a> | <a href="https://d11leod1im7q2u.cloudfront.net/6?agtbr" target="_blank">希望之声</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/11?egmkmpy" target="_blank">无界网络</a> | <a href="https://d3dbj8b4dt94o2.cloudfront.net/Pueji?wjjmkdut" target="_blank">追查国际</a> | <a href="https://db8nk66phkh66.cloudfront.net/16?wuoed" target="_blank">明慧之窗</a> | <a href="https://dme0bxbvomkno.cloudfront.net/LdvzZ?liiqkybew" target="_blank">细语人生</a> | <a href="https://d2esw86q58v8t7.cloudfront.net/fBn3r?cxuqszu" target="_blank">新世纪影视</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/PUWMb?ztkwrsyi" target="_blank">江峰时刻</a> | <a href="https://dme0bxbvomkno.cloudfront.net/8?rxfitqmg" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?jumoewmeh#1" target="_blank">首页</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/1?ytsafbt" target="_blank">动态网</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/2?euzimlcn" target="_blank">大纪元</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/4?hgvbteoom" target="_blank">看中国</a> | <a href="https://d1fejrztdgsube.cloudfront.net/pHh5q?joqdldcd" target="_blank">新生网</a> | <a href="https://d3d2r098q79b5l.cloudfront.net/tktpt?evbwmp" target="_blank">阿波罗网</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/Mjpvu?lqlwmtzmo" target="_blank">干净世界</a> | <a href="https://d1fejrztdgsube.cloudfront.net/10?kceqmrmjg" target="_blank">退党服务</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/Rffqf?slzgtslsq" target="_blank">明慧广播</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/nw9Vn?kegcqzm" target="_blank">传奇时代</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/AF9AG?unfgpmgl" target="_blank">新境界影视</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/zqMQA?ujtebk" target="_blank">文昭谈论</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/7?szhfunwg" target="_blank">明慧</a></p><p><a href="https://d2jsgnf2snq1t5.cloudfront.net/9?wntcfrj" target="_blank">大法</a> | <a href="https://dp0r2i3ixve2v.cloudfront.net/3?jkhzam" target="_blank">新唐人</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/obAhT?hwtazhc" target="_blank">人民报</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/xXNHu?zvlcv" target="_blank">放光明</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/5?kgxbpymi" target="_blank">新纪元</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/6?vrowdiy" target="_blank">希望之声</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/11?cvvfcxy" target="_blank">无界网络</a> | <a href="https://d2sn4gemyo21al.cloudfront.net/Pueji?zryvuptb" target="_blank">追查国际</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/16?sapnayajf" target="_blank">明慧之窗</a> | <a href="https://d1dy14m1lbgtrj.cloudfront.net/LdvzZ?nbltqh" target="_blank">细语人生</a> | <a href="https://d3dnxm84b62m8k.cloudfront.net/fBn3r?rwjrk" target="_blank">新世纪影视</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/PUWMb?cdcfsfupq" target="_blank">江峰时刻</a> | <a href="https://d11leod1im7q2u.cloudfront.net/8?dhxooroq" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545563.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2025/05/id14503430-712858--320x200.jpeg"><p align="center">专访俞伟雄：北京政策成效受限 美中矛盾难解</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545563.md#1" title="专访俞伟雄：北京政策成效受限 美中矛盾难解""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/05/id14503430-712858--320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545681.md#1" title="世俱杯四强产生 欧洲三大传统豪门脱颖而出""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/07/id14545706-GettyImages-2223728104-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545505.md#1" title="德州洪水至少27死 川普：竭尽所能救援""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/07/id14545545-AFP__20250705__64VC2H4__v1__MidRes__UsWeatherFlood-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1" title="中国出生率骤降 教师“铁饭碗”不再稳固""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/07/id14545449-000_Hkg4974422-600x400-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545780.md#1">日本拟向菲律宾出口退役护卫舰 强化威慑中共</a><br>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545674.md#1">消费需求不足 大陆银行员工自费推销信用卡</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545781.md#1">罗马仕深夜正式发停工停产放假通知 上热搜</a><br>
+:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545780.md#1">日本拟向菲律宾出口退役护卫舰 强化威慑中共</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545674.md#1">消费需求不足 大陆银行员工自费推销信用卡</a><br>
+:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545781.md#1">罗马仕深夜正式发停工停产放假通知 上热搜</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545743.md#1">理财专家：六种惯常花钱行为浪费大量金钱</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545750.md#1">特大型中共央企高层换人 原董事长去向未明</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545750.md#1">特大型中共央企高层换人 原董事长去向未明</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545735.md#1">以色列将派团赴多哈展开加沙停火谈判</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545739.md#1">最大块火星岩石或拍出400万美元天价</a><br>
 :clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544779.md#1">组图：作画50年 屡获殊荣的牛仔艺术家故事</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545563.md#1">专访俞伟雄：北京政策成效受限 美中矛盾难解</a><br>
-:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545713.md#1">菲律宾吕宋岛有湖中岛 该岛上还有湖中岛</a><br>
+:clock8: <em>5小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545563.md#1">专访俞伟雄：北京政策成效受限 美中矛盾难解</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544714.md#1">北大同学纪念李克强帖子受限 中共诡异内斗？</a><br>
@@ -108,13 +108,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542696.md#1">【佳音时刻】从宴会厅到马路边 五星级酒店摆摊</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542541.md#1">陆配“小微”返乡遭封口 专家：言论自由消失</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542633.md#1">专家：中共将不得不为迫害法轮功公开道歉</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d17d9g6noilapx.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d17d9g6noilapx.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d17d9g6noilapx.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,910</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d15gdfjldmu2s6.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d15gdfjldmu2s6.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,910</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 448,817,927 人
+!共 448,818,495 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544975.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/05/id14520926-54508949448_90afb36a84_k-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544975.md#1">在德国感受言论自由 大陆人退出中共组织</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544220.md#1">插播真相陷冤狱20年 甘肃张荣娟遭骚扰威胁</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544722.md#1">中共将藏族幼童送寄宿学校 令其脱离藏文化</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544553.md#1">遭长期稳控 丹东姜家文控诉区委书记左忠鹏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543103.md#1">上海访民诉讼案开庭 市局出动警察维稳</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543587.md#1">邢鉴成为新西兰公民 宣布放弃中共国国籍</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545674.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418045-740197-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545674.md#1">消费需求不足 大陆银行员工自费推销信用卡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545694.md#1">井有伦：大而美法案将深刻影响华人</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545632.md#1">锦州港财务造假遭重罚 高管被捕 退市倒计时</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544882.md#1">贝森特：人民币当储备货币 关键条件达不到</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544141.md#1">涉欺骗性商业行为 Shein被法国罚4千万欧元</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545600.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/02/id14436589-744776-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545600.md#1">法国促欧盟设关税壁垒 阻中国产品扼杀工业</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545005.md#1">星战计划2.0 川普“金穹”对台海有何影响</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544785.md#1">印度：印巴冲突中 中共向巴方提供即时情报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544516.md#1">欧盟强调台海和平重要性 台外交部：凸显重视</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544348.md#1">王毅访欧露底 北京担心美国将矛头指向自己</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544211.md#1">中共在新疆拟增6座器官移植中心 引活摘疑虑</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545620.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/07/id14545621-50bfda1ccbd3d4a114c5b6abece188f5-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545620.md#1">湖南一景区11级大风吹翻游船 29人落水</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545635.md#1">山东一高校宿舍无空调 学生热晕送医</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545368.md#1">广西男子钓鱼触电被烧伤 鱼塘4千斤鱼被电死</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545319.md#1">甘肃数十幼儿血铅超标 当地检测结果被疑造假</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545121.md#1">成都暴雨 东站成“水帘洞”居民家中插座出水</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544734.md#1">7月飘雪 青海祁连大草原一夜之间白雪皑皑</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545736.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545736.md#1">三退声明精选（2025/07/05）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545640.md#1">无锡民众收到超速罚单 17052km/h是波音787的20倍</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545320.md#1">浙江两火车相撞 受困乘客破窗通风受责引议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545007.md#1">朱时茂自曝一天遭遇两次诈骗 被骗走2千元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544993.md#1">【一线采访】河北百余业主饮水集体中毒</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542347.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2022/12/id13890990-e54943ff0b2ac0b59e6d04bc13519c8b-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542347.md#1">“别再卷了”大陆教师揭升学竞争的残酷</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538784.md#1">华为鸿蒙折叠电脑 有哪些事实不让你知道</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535124.md#1">潘粤明笑称自己专业画画 业余时间才去演戏</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14534300.md#1">太原一所中学军事化管理初中生 遭集体吐槽</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531373.md#1">杀人犯变身北京网红和智库专家 潜逃31年</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528721.md#1">美再收紧对华签证 取消14岁以下儿童免面试</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/5/23/n14516563.md#1">王友群：中南海巨变 中国出路在何方</a><br>
